[package]
name = "dalle_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11.5"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
serde_json = "1.0.85"
bytes = "1"
image = "0.24.3"
base64 = "0.13.0"